--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
-# Environment variables
+# ==============================================
+# RealGo MVP - .gitignore
+# ==============================================
+
+# Environment variables (IMPORTANTE: nunca subir a git)
 .env
+.env.local
+.env.*.local
 
 # Python
 __pycache__/
@@ -22,12 +28,14 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+MANIFEST
 
 # Virtual environments
 venv/
 env/
 ENV/
-.venv
+.venv/
+.env/
 
 # IDE
 .vscode/
@@ -35,10 +43,48 @@ ENV/
 *.swp
 *.swo
 *~
+.project
+.pydevproject
+.settings/
 
 # OS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
-# UV
+# UV / Lockfiles (opcional - algunos prefieren incluirlo)
 .uv/
+uv.lock
+
+# Local development
+.local/
+
+# Pytest
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+
+# Jupyter
+.ipynb_checkpoints/
+
+# Mypy
+.mypy_cache/
+
+# Replit específico (si aplica)
+attached_assets/
+.replit
+replit.nix
+
+# Logs
+*.log
+logs/
+
+# Coverage
+coverage.xml
+*.cover
