feat: autenticación JWT con Better Auth (JWKS)
- Añadido auth.py con JWKSManager y verificación de tokens

- Endpoints /me/sync para upsert de usuario con rol

- Endpoint /me para obtener perfil del usuario

- Endpoint /my/trips para viajes del usuario

- POST /trips ahora requiere autenticación y rol passenger

- GET /trips/{id} verifica que el usuario sea parte del viaje

- Schema actualizado con user_role enum y campo email

- Eliminado HARDCODED_PASSENGER_ID

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
-# Database URL for NeonDB
+# ==============================================
+# RealGo MVP - Variables de Entorno
+# ==============================================
+
+# Base de datos PostgreSQL (NeonDB)
 DATABASE_URL=postgresql://user:password@host/dbname?sslmode=require
+
+# Better Auth - JWKS URL para verificar tokens JWT
+# Obtén esta URL de tu servidor Better Auth
+BETTER_AUTH_JWKS_URL=https://tu-app.com/.well-known/jwks.json
