--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 fastapi>=0.128.0
 uvicorn[standard]>=0.40.0
 asyncpg>=0.31.0
+pydantic>=2.0.0
 pydantic-settings>=2.12.0
 python-dotenv>=1.2.1
+python-jose[cryptography]>=3.3.0
+httpx>=0.27.0
