feat: soporte EdDSA/Ed25519 para Neon Auth
- Añadido PyNaCl para verificar firmas Ed25519

- Implementado decode_ed25519_token() manual

- Variable JWKS_URL (también soporta NEON_AUTH_JWKS_URL)

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@
 # Base de datos PostgreSQL (NeonDB)
 DATABASE_URL=postgresql://user:password@host/dbname?sslmode=require
 
-# Better Auth - JWKS URL para verificar tokens JWT
-# Obtén esta URL de tu servidor Better Auth
-BETTER_AUTH_JWKS_URL=https://tu-app.com/.well-known/jwks.json
+# JWKS URL para verificar tokens JWT
+# Para Neon Auth:
+JWKS_URL=https://tu-proyecto.neonauth.c-X.us-east-1.aws.neon.tech/tu-db/auth/.well-known/jwks.json
+
+# Alternativas (el código busca en este orden: JWKS_URL, NEON_AUTH_JWKS_URL, BETTER_AUTH_JWKS_URL)
+# NEON_AUTH_JWKS_URL=https://...
+# BETTER_AUTH_JWKS_URL=https://...
